<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wordwiki.ui_main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>


    <fragment
        android:id="@+id/navigation_style"
        android:name="com.example.wordwiki.ui_main.style.StyleFragment"
        android:label="@string/title_style"
        tools:layout="@layout/fragment_style" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.wordwiki.ui_main.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.wordwiki.ui_main.actionbar.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.wordwiki.ui_main.actionbar.notification.NotificationFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_notification" />


</navigation>