<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/home_navigation">

    <navigation
        android:id="@+id/home_navigation"
        app:startDestination="@id/navigation_home">

        <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.wordwiki.ui_main.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home">
            <action
                android:id="@+id/action_navigation_home_to_navigation_notification"
                app:destination="@id/navigation_notification" />
            <action
                android:id="@+id/action_navigation_home_to_navigation_play"
                app:destination="@id/navigation_play" />
        </fragment>

        <fragment
            android:id="@+id/navigation_notification"
            android:name="com.example.wordwiki.ui_main.actionbar.notification.NotificationFragment"
            android:label="@string/title_notification"
            tools:layout="@layout/fragment_notification" >
            <action
                android:id="@+id/action_navigation_notification_to_navigation_home"
                app:destination="@id/navigation_home" />
        </fragment>

        <fragment
            android:id="@+id/navigation_play"
            android:name="com.example.wordwiki.ui_main.home.PlayFragment"
            android:label="@string/title_play"
            tools:layout="@layout/fragment_play" >
            <action
                android:id="@+id/action_navigation_play_to_navigation_home"
                app:destination="@id/navigation_home" />
        </fragment>

    </navigation><action android:id="@+id/action_global_home_navigation" app:destination="@id/home_navigation"/>


    <include app:graph="@navigation/explore_navigation" />
    <include app:graph="@navigation/library_navigation" />
    <include app:graph="@navigation/profile_navigation" />

</navigation>